<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nature">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_hei
        ght="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/name"
        android:inputType="text"/>

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8sp"
        android:text="@string/toppings"/>

    <CheckBox
        android:id="@+id/hasWhippedCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wipped_cream"
        android:paddingLeft="24dp"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/chocolate"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_marginBottom="16sp"
        android:layout_marginLeft="8sp"
        android:text="@string/quantity"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/add_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8sp"
        android:text="@string/plus"
        android:onClick="increment"/>

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/minus"
        android:onClick="decrement"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginLeft="8sp"
        android:text="@string/order"
        android:onClick="submitOrder"/>

    <Button
        android:id="@+id/button"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:text="Button" />

</LinearLayout>
</ScrollView>